<resources>
    <string name="app_name">VSSK</string>

    <string name="default_layout">Visuomenės sveikatos saugos kontrolės e-sistema</string>

    <string name="button_pradeti_kontrole">Pradėti kontrolę</string>

    <string name="login_name">Vardas</string>
    <string name="login_password">Pavardė</string>
    <string name="remember_me">Prisiminti mane</string>
    <string name="radiobutton_sporto_klubas">Sporto klubas</string>
    <string name="radiobutton_kirpykla">Kirpykla</string>
    <string name="radiobutton_sklabukla">Skalbykla</string>
    <string name="radiobutton_baseinas">Baseinas</string>
    <string name="radiobutton_select">Pasirinkite kontroliuojamą veiklą:</string>

    <string name="juridinio_asmens_pavadinimas">Juridinio asmens pavadinimas</string>
    <string name="juridinio_asmens_kodas">Kodas</string>
    <string name="juridinio_asmens_adresas">Veiklos vykdymo adresas</string>


    <!-- Klausimynas sporto klubui -->

    <string name="hn">HN123:2013</string>
    <string name="p1">4,</string>
    <string name="p2">5,</string>
    <string name="p3">8,</string>
    <string name="p4">8,</string>
    <string name="p5">33,</string>
    <string name="p6">6,</string>
    <string name="p7">13,</string>
    <string name="p8">15,</string>
    <string name="p9">31,</string>
    <string name="p10">26,</string>
    <string name="p11">30,</string>
    <string name="p12">31,</string>
    <string name="p13">39,</string>
    <string name="p14">33,</string>
    <string name="p15">15,</string>
    <string name="p16">34,</string>
    <string name="p17">36,</string>
    <string name="p18">25,</string>


    <string name="kl_1">1. Teikiamos paslaugos atitinka leidime-higienos pase ir Ūkinės komercinės
        veiklos vykdymo sąlygų vertinimo pažymoje nurodytas paslaugas ir sąlygas </string>
    <string name="kl_2">2. Sporto klubo paslaugų teikėjo parengtos vidaus tvarkos taisyklės
        skelbiamos gerai paslaugų vartotojams matomoje paslaugų teikimo vietoje </string>
    <string name="kl_3">3. Sporto klube yra pirmosios pagalbos rinkinys  </string>
    <string name="kl_4">4. Pirmosios pagalbos rinkinio sudėtis atitinka Įmonės pirmosios pagalbos
        rinkinio aprašymą  </string>
    <string name="kl_5">5. Stacionarios įrangos, įrenginių naudojimo instrukcijos  </string>
    <string name="kl_6">6. Darbuotojai turi sveikatos žinių ir įgūdžių atestavimo pažymėjimus, patvirtinančius,
        kad jie yra išklausę privalomuosius pirmosios pagalbos teikimo kursus  </string>
    <string name="kl_7">7. Sporto klubo paslaugų teikimo patalpose esantys įrenginiai technškai
        tavrkingi  </string>
    <string name="kl_8">8. Sporto klubo patalpoje (-ose) pratyboms (užsiėmimams) yra tik
        pratyboms (užsiėmimams) reikiama įranga ir inventorius  </string>
    <string name="kl_9">9. Sporto klubo patalpose, kuriose vyksta pratybos, yra įrangai,
        įrenginiams, inventoriui valyti skirtų priemonių, kuriomis gali naudotis sporto klubo
        paslaugų vartotojai   </string>
    <string name="kl_10">10.Karštas vanduo tiekiamas į dušo patalpas, tualetuose įrengtas praustuves  </string>
    <string name="kl_11">11. Persirengimo patalpoms, dušams, tualetams dezinfekuoti
        yra autorizuotų biocidinių produktų   </string>
    <string name="kl_12">12. Patalpoms, įrangai, inventoriui valyti skirtos
        priemonės naudojamos pagal paskirtį ir jų gamintojo instrukcijas  </string>
    <string name="kl_13">13. Patalpoms, įrangai, inventoriui valyti skirtos priemonės
        naudojamos pagal paskirtį ir jų gamintojo instrukcijas   </string>
    <string name="kl_14">14. Kas 3 mėnesius karšto vandens tiekimo sistemoje vandens
        temperatūra profilaktiškai pakeliama iki ne žemesnės kaip 66 °C temperatūros ir išlaikoma ne trumpiau kaip 25 min.   </string>
    <string name="kl_15">15. Sporto klubo paslaugų teikėjas ne rečiau kaip vieną kartą per
        metus atlieka geriamojo vandens (šalto ir karšto) mikrobiologinį tyrimą legionelėms nustatyti  </string>
    <string name="kl_16">16. 1 l vandens radus daugiau nei 10 000 legionelių, buvo patikrinta,
        išvalyta vandens tiekimo sistema, pašalintas jos kenksmingumas, koreguotos esamos ir / ar imtasi naujų legioneliozės profilaktikos priemonių  </string>
    <string name="kl_17">17. Karšto geriamojo vandens čiaupe temperatūra
        (išmatavus temperatūrą po 1 min., kai buvo atsuktas čiaupas ir paleistas vanduo) –
        aukštesnė kaip 50 °C </string>
    <string name="kl_18">18. Šalto geriamojo vandens čiaupe temperatūra
        (išmatavus temperatūrą po 2 min., kai buvo atsuktas čiaupas ir paleistas vanduo) – žemesnė kaip 20 °C


    </string>

    <!-- Klausimynas baseinui: -->

    <string name="hng">HN 109:2016 </string>
    <string name="b1">6,</string>
    <string name="b2">24,</string>
    <string name="b3">16,</string>
    <string name="b4">28,</string>
    <string name="b5">37,</string>
    <string name="b6">32,</string>
    <string name="b7">15,</string>
    <string name="b8">15,</string>
    <string name="b9">33,</string>
    <string name="b10">34,</string>

    <string name="k2_1">1. Teikiamos paslaugos atitinka leidime-higienos pase ir Ūkinės komercinės
        veiklos vykdymo sąlygų vertinimo pažymoje nurodytas paslaugas ir sąlygas </string>
    <string name="k2_2">2. Gerai baseino paslaugų vartotojui matomoje vietoje yra: informacija apie teikiamas
        paslaugas </string>
    <string name="k2_3">3. Baseine ryškiai pažymėtos vietos, kur baseino gylis didesnis nei 1 m  </string>
    <string name="k2_4">4. Pirmosios pagalbos rinkinio sudėtis atitinka Įmonės pirmosios pagalbos rinkinio aprašymą </string>
    <string name="k2_5">5. Kiekvienam paslaugų vartotojui tiekiami tik išskalbti, išlyginti ir po to
        kitų paslaugų vartotojų nenaudoti skalbiniai  </string>
    <string name="k2_6">6. Baseino, persirengimo, dušo, tualeto patalpų grindų, laiptų danga neslidi,
        tinkama valyti drėgnai, lygi (be pavojingų įdubimų, iškilimų, angų, įplyšimų, įskilimų) </string>
    <string name="k2_7">7. Baseine esančios angos, į kurias gali būti įtrauktas paslaugų vartotojas
        ar jo kūno dalys, uždengtos apsauginėmis grotelėmis, kurių tarpai ne didesni nei 0,8 cm, ar
        kitais apsauginiais įtaisais  </string>
    <string name="k2_8">8. Karštas vanduo tiekiamas į: tualete (-uose) įrengtas praustuves </string>
    <string name="k2_9">9. Baseino patalpos, įranga, įrenginiai, inventorius švarūs (nėra akivaizdžiai matomų nešvarumų)</string>
    <string name="k2_10">10. Baseino vanduo skaidrus (gerai matomas baseino dugnas) </string>

    <!-- Klausimynas kipyklai: -->

    <string name="hg">HN 117:2007</string>
    <string name="k1">6,</string>
    <string name="k2">24,</string>
    <string name="k3">16,</string>
    <string name="k4">28,</string>
    <string name="k5">37,</string>
    <string name="k6">32,</string>
    <string name="k7">15,</string>
    <string name="k8">15,</string>
    <string name="k9">33,</string>
    <string name="k10">34,</string>

    <string name="k3_1">1. Teikiamos paslaugos atitinka leidime-higienos pase ir Ūkinės komercinės
        veiklos vykdymo sąlygų vertinimo pažymoje nurodytas paslaugas ir sąlygas </string>
    <string name="k3_2">2. Instrumentai valomi ir dezinfekuojami instrumentų valymo, dezinfekcijos
        patalpoje (zonoje), kurioje yra: praustuvė instrumentams plauti </string>
    <string name="k3_3">3. Teikiant paslaugą kiekvienam paslaugų vartotojui naudojami švarūs,
        kitiems vartotojams nenaudoti, ar vienkartiniai užtiesalai  </string>
    <string name="k3_4">4. Paviršiai, prie kurių tiesiogiai (oda, plaukai) liečiasi paslaugų
        vartotojas teikiant jam grožio paslaugą, dengiami vienkartiniu užtiesalu arba valomi ir
        dezinfekuojami po kiekvieno paslaugų vartotojo  </string>
    <string name="k3_5">5. Švarūs skalbiniai laikomi jiems skirtoje švarioje uždaroje spintoje
        arba talpykloje  </string>
    <string name="k3_6">6. Paruošti naudoti instrumentai laikomi tam skirtoje švarioje, uždengtoje talpykloje  </string>
    <string name="k3_7">7. Vienkartiniai instrumentai naudojami vieną kartą  </string>
    <string name="k3_8">8. Paslaugoms teikti naudojami tik dezinfekuoti daugkartiniai instrumentai </string>
    <string name="k3_9">9. Įranga, prietaisai, valymo, dezinfekcijos įrenginiai naudojami pagal
        gamintojo rekomendacijas  </string>
    <string name="k3_10">10. Grožio paslaugų teikėjas turi įrangos, prietaisų, valymo, dezinfekcijos
        įrenginių naudojimo aprašymus lietuvių kalba  </string>


</resources>
