<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.example.aurimas.inspektorius.MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/default_layout"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="15dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/login_name"
        android:layout_height="wrap_content"
        android:layout_width="290dp"
        android:layout_gravity="center"
        android:hint="@string/login_name"
        android:textAlignment="center"
        android:inputType="text"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_height="wrap_content"
        android:layout_width="290dp"
        android:layout_gravity="center"
        android:hint="@string/login_password"
        android:textAlignment="center"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/login_remember_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remember_me" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/radiobutton_select"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="15dp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    </Spinner>

    <!--<RadioGroup-->
        <!--android:id="@+id/radiogroup_check"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<RadioButton-->
            <!--android:layout_gravity="center"-->
            <!--android:id="@+id/radiobutton_sporto_klubas"-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:checked="false"-->
            <!--android:text="@string/radiobutton_sporto_klubas"/>-->

        <!--<RadioButton-->
            <!--android:layout_gravity="center"-->
            <!--android:id="@+id/radiobutton_baseinas"-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:checked="false"-->
            <!--android:text="@string/radiobutton_baseinas"/>-->

        <!--<RadioButton-->
            <!--android:layout_gravity="center"-->
            <!--android:id="@+id/radiobutton_kirpykla"-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:checked="false"-->
            <!--android:text="@string/radiobutton_kirpykla"/>-->

    <!--</RadioGroup>-->
    <!---->


    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/pradeti_kontrole"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/button_pradeti_kontrole"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"/>

</LinearLayout>