<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.aurimas.inspektorius.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="Bendra informacija"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="15dp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/pavadinimas"
        android:textSize="30px"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/juridinio_asmens_pavadinimas"
        android:textAlignment="center"
        android:layout_alignParentLeft="true"
        android:inputType="text"/>

    <EditText
        android:id="@+id/kodas"
        android:textSize="30px"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/juridinio_asmens_kodas"
        android:textAlignment="center"
        android:layout_alignParentRight="true"
        android:inputType="number"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/adresas"
        android:textSize="30px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/juridinio_asmens_adresas"
        android:textAlignment="center"
        android:inputType="text"/>

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <EditText
        android:id="@+id/tel_nr"
        android:textSize="30px"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="telefono nr."
        android:textAlignment="center"
        android:layout_alignParentLeft="true"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/el_pastas"
        android:textSize="30px"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="el. pastas"
        android:textAlignment="center"
        android:inputType="textEmailAddress"
        android:layout_alignParentRight="true"
        />
    </RelativeLayout>
    <EditText
        android:id="@+id/atsakingo_pareigos"
        android:textSize="30px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Atsakingo asmens pareigos"
        android:textAlignment="center"
        android:inputType="text"/>

    <EditText
        android:id="@+id/atsakingo_vp"
        android:textSize="30px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="vardas, pavardė"
        android:textAlignment="center"
        android:inputType="text"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="Klausimynas"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="15dp" />

    <LinearLayout
        android:id="@+id/klausimai"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/pastabos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Pastabos (komentarai)"
        android:textAlignment="center"
        android:inputType="text"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/baigti_kontrole"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="Baigti patikrinimą"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:layout_alignParentLeft="true"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/siusti_akta"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="Siųsti el. paštu"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/black"/>

    </RelativeLayout>

</LinearLayout>

</ScrollView>
